# DaftPixel

./: .gitignore  CMakeLists.txt  README.md
DaftPixel/: CMakeLists.txt
DaftPixel/include/: application.h  main.h
DaftPixel/include/controller/: CanvasController.h  CanvasRendererController.h  EditorController.h
DaftPixel/include/controller/canvas/: CanvasRendererController.h  CanvasSurfaceController.h  SurfaceController.h
DaftPixel/include/controller/editor/: EditorController.h
DaftPixel/include/manager/: BindingManager.h  CommandManager.h  InputManager.h  KeyBindingManager.h
DaftPixel/include/model/: Action.h  Canvas.h  Pixel.h  PixelBuffer.h
DaftPixel/include/model/canvas/: Canvas.h  CanvasSurface.h  RenderContext.h  Surface.h
DaftPixel/include/model/editor/: Context.h  State.h
DaftPixel/include/view/: Canvas.h  CanvasRenderer.h  IDrawable.h  ILayout.h  IUpdatable.h  RenderManager.h
DaftPixel/include/view/canvas/: CanvasSurfaceView.h  SurfaceView.h
DaftPixel/include/view/canvas/ui/: CanvasStatusBar.h  InfoWidget.h  Layout.h  StatusBar.h
DaftPixel/include/view/editor/: EditorView.h
DaftPixel/include/view/ui/: CanvasStatusBar.h
DaftPixel/src/: application.cpp  main.cpp
DaftPixel/src/controller/: CanvasController.cpp  CanvasRendererController.cpp  EditorController.cpp
DaftPixel/src/controller/canvas/: CanvasController.cpp  CanvasRendererController.cpp  CanvasSurfaceController.cpp  SurfaceController.cpp
DaftPixel/src/controller/editor/: EditorController.cpp
DaftPixel/src/manager/: BindingManager.cpp  CommandManager.cpp  InputManager.cpp  KeyBindingManager.cpp
DaftPixel/src/model/: Canvas.cpp  Pixel.cpp  PixelBuffer.cpp
DaftPixel/src/model/canvas/: Canvas.cpp  CanvasSurface.cpp  RenderContext.cpp  Surface.cpp
DaftPixel/src/model/editor/: Context.cpp  State.cpp
DaftPixel/src/view/: CanvasRenderer.cpp  RenderManager.cpp
DaftPixel/src/view/canvas/: CanvasSurfaceView.cpp  SurfaceView.cpp
DaftPixel/src/view/canvas/ui/: CanvasStatusBar.cpp  Layout.cpp  StatusBar.cpp
DaftPixel/src/view/editor/: EditorView.cpp
DaftPixel/src/view/ui/: CanvasStatusBar.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/model/: test_Canvas.cpp  test_PixelBuffer.cpp
